@@ -27,6 +27,8 @@ IN DEVELOPMENT
       generation of a working tree in the new branch.
       (Daniel Watkins, John Klinger, #273993)
 
+    * Support for GSSAPI authentication when using HTTP. (Jelmer Vernooij)
+
   BUG FIXES:
 
     * ``bzr unshelve`` gives a more palatable error if passed a non-integer
